--- a/scss/style.scss
+++ b/scss/style.scss
@@ -12,7 +12,7 @@
 
 // Importing the sections
 
-@use 'sections/companies';
+@use 'sections/tools';
 @use 'sections/contact-form';
 @use 'sections/footer';
 @use 'sections/intro-section';
