--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -10810,6 +10810,18 @@ textarea.form-control-lg {
   background-color: #6f42c1;
 }
 
+.tool-name {
+  text-transform: capitalize;
+  color: #6f42c1;
+  font-size: 1rem;
+  padding-top: 0.75rem;
+  border: 0.5px solid green;
+}
+
+.title {
+  color: #6f42c1;
+}
+
 .tools {
   padding: 0 0 5rem 0;
 }
@@ -10824,6 +10836,48 @@ textarea.form-control-lg {
 .tools_logo-box img {
   height: 100%;
   display: inline-block;
+}
+
+.get-started {
+  padding: 4rem 0;
+  background-color: #e9ecef;
+}
+
+.gradient {
+  background: linear-gradient(to right, rgba(111, 66, 193, 0.95), rgba(102, 16, 242, 0.95));
+}
+
+.cta-info {
+  padding: 3rem;
+  margin: 1rem 0;
+}
+.cta-info__list {
+  position: relative;
+  list-style-type: none;
+  display: block;
+  padding-top: 0.5rem;
+  padding-left: 0.5rem;
+  margin-bottom: 0.7rem;
+}
+.cta-info__list li::before {
+  font-size: "Font Awesome 5 Free";
+  content: "";
+  font-weight: 600;
+  margin-right: 0.5rem;
+  font-size: 1.2rem;
+}
+
+.form {
+  padding: 3rem;
+}
+.form button {
+  border: none;
+  color: white;
+}
+.form button a {
+  color: white;
+  text-decoration: none;
+  text-transform: capitalize;
 }
 
 .intro-section {
@@ -10875,6 +10929,46 @@ textarea.form-control-lg {
   color: #fff !important;
   text-transform: capitalize;
   font-weight: 600;
+}
+
+.portfolio {
+  padding: 4rem 0;
+}
+
+.portfolio-box {
+  position: relative;
+  width: 100%;
+  height: 18.5rem;
+  overflow: hidden;
+  margin-bottom: 1.2rem;
+}
+.portfolio-box img {
+  width: 100%;
+  height: 100%;
+}
+.portfolio-box .portfolio-info {
+  background-color: rgba(111, 66, 193, 0.75);
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  top: 0;
+  opacity: 0;
+  visibility: hidden;
+}
+.portfolio-box .portfolio-info .caption {
+  text-align: center;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  color: white;
+}
+.portfolio-box .portfolio-info .caption h4 {
+  text-transform: uppercase;
+}
+.portfolio-box:hover .portfolio-info {
+  opacity: 1;
+  visibility: visible;
 }
 
 /*# sourceMappingURL=style.css.map */
