--- a/scss/components/_mixins.scss
+++ b/scss/components/_mixins.scss
@@ -8,6 +8,9 @@
     background: linear-gradient(to right, rgba($primary, 0.95), rgba($secondary, 0.95));
 }
 
+@mixin titleColor {
+    color: linear-gradient(to right, rgba($primary, 0.95), rgba($secondary, 0.95));
+}
 
 
 // ABSOLUTE CENTER
