--- a/scss/sections/_intro-section.scss
+++ b/scss/sections/_intro-section.scss
@@ -10,6 +10,10 @@
 }
 
 .intros {
+
+    .custom-text {
+        font-size: 2rem;
+    }
     .video-box {
         position: relative;
         a {
