--- a/scss/sections/_navbar.scss
+++ b/scss/sections/_navbar.scss
@@ -3,6 +3,13 @@
 
 .menu {
     @include gradient;
+    
+    .logo {
+        
+        img{
+            width: 8rem;
+        }
+    }
 
     li {
         padding: 0 0.7 rem;
